# email-automation

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  check_db.py  email_scheduler.db-shm  email_scheduler.db-wal  main.py  pyproject.toml  run.bat  run.sh  update_db.py
.github/workflows/: release.yml
.streamlit/: config.toml
services/: batch_sender.py  db.py  email_service.py  excel_service.py  scheduler_service.py  template_service.py
